--- a/.github/workflows/main-rsync.yml
+++ b/.github/workflows/main-rsync.yml
@@ -13,10 +13,10 @@ jobs:
     - name: rsync deployments
       uses: burnett01/rsync-deployments@7.0.1
       with:
-        switches: -avzrP --delete --exclude=".git*/" --exclude="acf-json/"
+        switches: -avzrP --delete --exclude=".git*/"
         path: ./
-        remote_path: /home/customer/www/robm288.sg-host.com/public_html/wp-content/themes/aftermath-repair
-        remote_host: ssh.robm288.sg-host.com
+        remote_path: /home/customer/www/kristyb25.sg-host.com/public_html/wp-content/themes/aftermath-repair
+        remote_host: ssh.kristyb25.sg-host.com
         remote_port: 18765
-        remote_user: u1853-0cezm1o50w7t
+        remote_user: u3178-8wh8kob3gdrv
         remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
